Fix style z-index

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ textarea, select, input {
 	max-width: 1280px;
 	margin: auto; 
 	margin-top: 0; 
+	z-index: 0;
 }
 #app-container.centered-content {
 	margin-top: auto;
